--- a/fileOne.html
+++ b/fileOne.html
@@ -3,13 +3,27 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>My Project for Wednesday</title>
+		<title>My Project for Friday</title>
+		
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		
 		<script src= "fileTwo.js" type= "text/javascript"></script> 
 		
 	</head>
 	<body>
-		<h1>Using jQuary seems to be a fun, at least for the now. Hey it looks it is working</h1>
+		<h1>Fed hints at changing interest rate</h1>
+		
+		<h2> FOME likely to meet next week</h2>
+		
+		<div id="bigBag">
+			
+			New York, Jan 18 - The Fed has starting exploring the possibilities of raising the short-term interest rate, a 
+			highly-placed source has said.
+			
+	
+		
+	
+		
 	</body>
 </html>
 
